src/objects/CheckEngine__c.object
<CustomObject>
    <fields>
        <fullName>DTCS_Code__c</fullName>
        <label>DTCS Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTCS_Description__c</fullName>
        <label>DTCS Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Driver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Driver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CheckEngine</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <label>Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>CheckEngine</relationshipLabel>
        <relationshipName>CheckEngine</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>location__c</fullName>
        <label>location</label>
        <scale>3</scale>
        <type>Location</type>
    </fields>
    <label>CheckEngine</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CE{0}</displayFormat>
        <label>CheckEngine ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CheckEngine</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>